crates/snapshot-tests/tests/snapshots/parser__bad_leading_zeros__pos_with_dec.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[InvalidFloat]: invalid float: leading zeros are not allowed at `a`
  ┌─ pos_with_dec:1:5
  │
1 │ a = +00.0
  │     ^^^ invalid float: leading zeros are not allowed
